--- a/GCD/Base.lproj/Main.storyboard
+++ b/GCD/Base.lproj/Main.storyboard
@@ -1,24 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eEw-FI-Tsf">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GCD" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBO-i8-ahy">
+                                <rect key="frame" x="142" y="432.5" width="130" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Show secondVC"/>
+                                <connections>
+                                    <segue destination="Rlm-wZ-rJd" kind="show" id="QrA-i7-HuE"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hBO-i8-ahy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="14N-My-D7i"/>
+                            <constraint firstItem="hBO-i8-ahy" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="gZw-2m-7Uz"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="PAd-Ef-IWO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="928.98550724637687" y="82.366071428571431"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="4jL-jd-NrH">
+            <objects>
+                <viewController id="Rlm-wZ-rJd" customClass="SecondViewController" customModule="GCD" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="c0Y-ac-1s0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j4c-8k-nxR">
+                                <rect key="frame" x="5" y="98" width="404" height="404"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="j4c-8k-nxR" secondAttribute="height" id="EQA-5U-hV3"/>
+                                </constraints>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Uja-Aq-dCO">
+                                <rect key="frame" x="197" y="290" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="YSC-4q-SfF"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Uja-Aq-dCO" firstAttribute="centerY" secondItem="j4c-8k-nxR" secondAttribute="centerY" id="2dq-c1-pB3"/>
+                            <constraint firstItem="YSC-4q-SfF" firstAttribute="trailing" secondItem="j4c-8k-nxR" secondAttribute="trailing" constant="5" id="Lzx-sM-iG8"/>
+                            <constraint firstItem="j4c-8k-nxR" firstAttribute="leading" secondItem="YSC-4q-SfF" secondAttribute="leading" constant="5" id="WmN-L3-3po"/>
+                            <constraint firstItem="Uja-Aq-dCO" firstAttribute="centerX" secondItem="j4c-8k-nxR" secondAttribute="centerX" id="hIv-ZV-9id"/>
+                            <constraint firstItem="j4c-8k-nxR" firstAttribute="top" secondItem="YSC-4q-SfF" secondAttribute="top" constant="10" id="ph6-R9-sBG"/>
+                            <constraint firstItem="j4c-8k-nxR" firstAttribute="centerX" secondItem="c0Y-ac-1s0" secondAttribute="centerX" id="pv2-6h-0zX"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="nm6-3b-aop"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="Uja-Aq-dCO" id="2eA-8h-q5B"/>
+                        <outlet property="imageView" destination="j4c-8k-nxR" id="oAY-Ku-DCj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oRp-C7-o88" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1730" y="82"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vNP-bT-uiV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eEw-FI-Tsf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3yl-PS-nqe">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fgG-1N-LAE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ip-Eh-elj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="82.366071428571431"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
